Consolidate process details in just one description field
Removed process field diagramUrl as the markdown will allow embedding images
Bump version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # OpenApi configuration
 mp.openapi.extensions.smallrye.info.title=EGI Management System API
-mp.openapi.extensions.smallrye.info.description=Backend for the SYS process of the EGI Integrated Management System
+mp.openapi.extensions.smallrye.info.description=Backend for the IMS process of the EGI Integrated Management System
 mp.openapi.extensions.smallrye.info.contact.name=EGI Foundation
 mp.openapi.extensions.smallrye.info.contact.url=https://www.egi.eu/contact-us/
 mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
