Fixed listing of roles
Upgrade to the latest Quarkus version

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -119,6 +119,9 @@ quarkus:
     trust-all: false
   test:
     continuous-testing: disabled
+  keycloak:
+    devservices:
+      enabled: false
   datasource:
     db-kind: postgresql
     reactive:
