--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -31,7 +31,7 @@ RUN mkdir /deployments/logs && \
     chmod a+rw /deployments/logs
 
 # If you want to include the debug port into your docker image
-# you will have to expose the debug port (default 5005) like this :  EXPOSE 8081 5005
+# you will have to expose the debug port (default 5005) like this :  EXPOSE 808x 5005
 # Additionally you will have to set -e JAVA_DEBUG=true and -e JAVA_DEBUG_PORT=*:5005
 # when running the container
 
