--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -12,11 +12,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t egi/ims-slm-api .
+# docker build -f src/main/docker/Dockerfile.native-micro -t egi/ims-api .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 9081:8081 egi/ims-slm-api
+# docker run -i --rm -p 9081:8081 egi/ims-api
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:2.0
@@ -26,7 +26,7 @@ RUN chown 1001 /work \
     && chown 1001:root /work
 COPY --chown=1001:root target/*-runner /work/application
 
-EXPOSE 8080
+EXPOSE 8081
 USER 1001
 
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
